Follow node naming conventions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Privacy-Educational-App",
+  "name": "privacy-educational-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
