--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sass": "^1.59.2",
+    "use-count-up": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
